--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -94,7 +94,7 @@
 //end slider
 //start service
 .service__inner {
-  margin: 50px 0 50px;
+  margin: 30px 0 30px;
   margin-left: -30px;
 }
 .service__items {
@@ -105,6 +105,7 @@
   flex-basis: calc(25% - 30px);
   margin-left: 30px;
   text-align: center;
+  padding: 20px 0 20px;
   &:hover {
     border-radius: 4px;
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.07);
